<resources>
    <string name="app_name">Finding Me</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_login">Iniciar Sesión</string>
    <string name="title_activity_splash_screen">Splash Screen</string>
    <string name="title_activity_home">Inicio</string>
    <string name="title_activity_sign_up">Registrarme</string>
    <string name="title_activity_recover_password">Recuperar Contraseña</string>

    <string name="hint_user">Usuario</string>
    <string name="hint_pass">Contraseña</string>
    <string name="hint_pass_confirm">Repetir Contraseña</string>
    <string name="hint_email">Correo</string>

    <string name="txt_btn_sign_in">Iniciar Sesión</string>
    <string name="txt_social">También puedes ingresar con</string>
    <string name="txt_btn_gplus">Google +</string>
    <string name="txt_btn_facebook">Facebook</string>
    <string name="txt_btn_sign_up">Registrarme</string>
    <string name="txt_btn_recover_send">Enviar</string>

    <string name="txv_recover_link">¿Has olvidado tu contraseña?</string>
    <string name="txv_recover_content">Finding Me te enviará las instrucciones sobre como restablecer tu contraseña a tu dirección de correo asociada a tu cuenta.</string>
    <string name="hello_world">Hola Mundo</string>
    <string name="home_item">Inicio</string>
    <string name="my_pets_item">Mis Mascotas</string>
    <string name="my_search_item">Mis Búsquedas</string>
    <string name="my_info_item">Mi Información</string>
    <string name="sign_out_item">Cerrar Sesión</string>
    <string name="openDrawer">Abrir Drawer</string>
    <string name="closeDrawer">Cerrar Drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_action_search">Buscar</string>
    <string name="promptDistrito">Distritos</string>
    <string name="promptTipoMascota">Tipo Mascota</string>
    <string name="hint_pet_name">Nombre Mascota</string>
    <string name="hint_pet_edad">Edad</string>
    <string name="hint_pet_information">Información</string>
    <string name="title_activity_maps">Última Ubicación</string>
    
</resources>
