<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:checked="true"
            android:icon="@drawable/ic_home"
            android:title="@string/home_item" />
        <item
            android:id="@+id/nav_my_info"
            android:icon="@drawable/ic_my_info"
            android:title="@string/my_info_item" />
        <item
            android:id="@+id/nav_my_pets"
            android:icon="@drawable/ic_my_pets"
            android:title="@string/my_pets_item" />
        <item
            android:id="@+id/nav_my_search"
            android:icon="@drawable/ic_my_search"
            android:title="@string/my_search_item" />
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_sign_out"
            android:title="@string/sign_out_item" />
    </group>
</menu>